--- a/app.json
+++ b/app.json
@@ -41,7 +41,13 @@
               "savePhotosPermission": "Allow $(PRODUCT_NAME) to save photos.",
               "isAccessMediaLocationEnabled": true
             }
-          ]
+          ],
+          [
+            "expo-barcode-scanner",
+            {
+              "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
+            }
+                    ]
         ]
       }
     }
