--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -27,7 +27,10 @@
     "expo-media-library": "~15.2.3",
     "expo-image-picker": "~14.1.1",
     "expo-face-detector": "~12.1.1",
-    "expo-barcode-scanner": "~12.3.2"
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-localization": "~14.1.1",
+    "expo-location": "~15.1.1",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
